[gd_scene load_steps=2 format=3 uid="uid://be6fkocydvmi6"]

[ext_resource type="Script" uid="uid://c7p8mn4x76haa" path="res://scripts/move_choose.gd" id="1_u00c7"]

[node name="MoveChoose" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u00c7")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.000868056
anchor_top = 0.029321
anchor_right = 0.458333
anchor_bottom = 0.421296
text = "MoveName"
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.485243
anchor_top = 0.0277778
anchor_right = 0.969618
anchor_bottom = 0.419753
text = "MoveName"
metadata/_edit_use_anchors_ = true

[node name="Button3" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.481771
anchor_top = 0.5
anchor_right = 0.973958
anchor_bottom = 0.949074
text = "MoveName"
metadata/_edit_use_anchors_ = true

[node name="Button4" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0164931
anchor_top = 0.506173
anchor_right = 0.451389
anchor_bottom = 0.945988
text = "MoveName"
metadata/_edit_use_anchors_ = true
